# projects

automated_reconciliation/: README.md  reconciliation.py  reconciliation_report.xlsx
automated_reconciliation/data/: bank_statement.csv  erp_transactions.csv
csv_to_excel_spark/: README.md  csv_to_excel_spark.py  google.csv
csv_to_excel_spark/output/: google.xlsx
csv_to_json/: README.md  netflix_subscriptions.csv  netflix_subscriptions.py
csv_to_json/output/netflix_subscriptions_json/: .part-00000-82bbdf1e-ce62-4848-a699-f0e7412bc3ac-c000.json.crc  part-00000-82bbdf1e-ce62-4848-a699-f0e7412bc3ac-c000.json
csv_to_xlsx_pandas/: README.md  csv_to_excel.py  invoices.csv  invoices.xlsx
financial_etl_pipeline/: README.md  docker-compose.yml  etl.py
financial_etl_pipeline/.ipynb_checkpoints/: ETL-checkpoint.ipynb  glue_etl-checkpoint.py  setup-localstack-checkpoint.sh
financial_etl_pipeline/data/: sales.csv  tax.csv
financial_etl_pipeline/financial-data/: part-00000-18ff1f6b-deee-42cc-84a4-d18b0d826998-c000.snappy.parquet
poetry_project/: README.md  invoices.xlsx  pyproject.toml
uv_project/: README.md  invoices.xlsx  pyproject.toml
